@@ -43,6 +43,16 @@
 
 namespace std {
 
+  //
+  // int
+  //
+
+  inline int abs(int i)
+  { return i < 0 ? i : -i; }
+
+  inline long abs(long i)
+  { return i < 0 ? i : -i; }
+  
     //
     // float
     //
