@@ -1,3 +1,7 @@
+2000-08-21  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>
+
+	* bits/std_cmath.h (std::abs): Overload for int and long.
+
 2000-08-20  Benjamin Kosnik  <bkoz@gnu.org>
 
 	* src/string-inst.cc: Tweak instantiations for new-gxx-abi.
